--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "type": "module",
   "scripts": {
-    "docs:dev": "vitepress dev docs --host",
-    "docs:build": "vitepress build docs",
-    "docs:preview": "vitepress preview docs"
+    "dev": "vitepress dev docs --host",
+    "build": "vitepress build docs",
+    "preview": "vitepress preview docs"
   },
   "devDependencies": {
+    "@types/bun": "^1.2.2",
     "vitepress": "^1.6.3",
     "vue": "^3.5.13"
   }
