Add Portuguese localization

--- a/.typos.toml
+++ b/.typos.toml
@@ -1,5 +1,7 @@
 [files]
 extend-exclude = [
     "docs/nl/",
-    "docs/.vitepress/nl.ts"
+    "docs/.vitepress/nl.ts",
+    "docs/pt/",
+    "docs/.vitepress/pt.ts"
 ]
